# fs-init

./: .clippy.toml  CLAUDE.md  Cargo.toml  Containerfile  README.md  package.toml
.githooks/: pre-commit
src/: catalog_reader.rs  error.rs  keys.rs  main.rs
src/wizard/: bundle.rs  confirm.rs  done.rs  engine.rs  mod.rs  progress.rs  store_load.rs
